.provarCaches/00D5h000009Q6XQEA0/objects/provar__Risk__c.object
<CustomObject>
    <description>Describes the risks associated with a test plan.</description>
    <fields>
        <fullName>provar__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>provar__Has_Coverage__c</fullName>
        <formula>provar__Number_of_Test_Cases__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Coverage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>provar__Impact__c</fullName>
        <label>Impact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Negligible</fullName>
                </value>
                <value>
                    <fullName>Minor</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>Significant</fullName>
                </value>
                <value>
                    <fullName>Severe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>provar__Likelihood__c</fullName>
        <label>Likelihood</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Very Unlikely</fullName>
                </value>
                <value>
                    <fullName>Unlikely</fullName>
                </value>
                <value>
                    <fullName>Possible</fullName>
                </value>
                <value>
                    <fullName>Likely</fullName>
                </value>
                <value>
                    <fullName>Very Likely</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>provar__Mitigation_Approach__c</fullName>
        <inlineHelpText>Describe how the risk will be managed, reduced, or eliminated</inlineHelpText>
        <label>Mitigation Approach</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>provar__Mitigation_Strategy__c</fullName>
        <label>Mitigation Strategy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accept</fullName>
                </value>
                <value>
                    <fullName>Avoid</fullName>
                </value>
                <value>
                    <fullName>Control</fullName>
                </value>
                <value>
                    <fullName>Transfer</fullName>
                </value>
                <value>
                    <fullName>Monitor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>provar__Number_of_Test_Cases__c</fullName>
        <label>Number of Test Cases</label>
        <summaryForeignKey>provar__Risk_Test_Case__c.provar__Risk__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>provar__Proposed_Solution__c</fullName>
        <inlineHelpText>Describe how the risk could be solved</inlineHelpText>
        <label>Proposed Solution</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>provar__Risk_Level__c</fullName>
        <formula>IF(  provar__Risk_Score__c &lt;= 5, &quot;Very Low&quot;,
  IF( provar__Risk_Score__c &lt;= 11, &quot;Low&quot;,
    IF( provar__Risk_Score__c &lt;= 19, &quot;Moderate&quot;,
      IF( provar__Risk_Score__c &lt;= 24, &quot;High&quot;,
        &quot;Very High&quot;)
    )
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Combination of likelihood and impact</inlineHelpText>
        <label>Risk Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>provar__Risk_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Risk Owner</label>
        <referenceTo>provar__Person__c</referenceTo>
        <relationshipLabel>Owned Risks</relationshipLabel>
        <relationshipName>Owned_Risks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>provar__Risk_Score__c</fullName>
        <description>Multiplication of Impact * Likelihood</description>
        <formula>CASE( provar__Likelihood__c,
 &quot;Very Likely&quot;, 5,
 &quot;Likely&quot;, 4,
 &quot;Possible&quot;, 3,
 &quot;Unlikely&quot;, 2,
 1)
*
CASE( provar__Impact__c,
 &quot;Severe&quot;, 5,
 &quot;Significant&quot;, 4,
 &quot;Moderate&quot;, 3,
 &quot;Minor&quot;, 2,
 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Risk Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>provar__Test_Plan__c</fullName>
        <label>Test Plan</label>
        <referenceTo>provar__Test_Plan__c</referenceTo>
        <relationshipLabel>Risks</relationshipLabel>
        <relationshipName>Risks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Risk</label>
    <nameField>
        <label>Risk</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Risks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>